# freedesktop-icons

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
freedesktop_icons/: __init__.py  cache.py  icons.py  slots.py  slots.pyi  theme.py
tests/: test_cache.py  test_init.py  test_theme.py
tests/data/test-theme/: icon-theme.cache  index.theme
